--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     background-color: aqua;
 }
  .form-input{
-    margin-left: auto;
-    margin-right: auto;
-    width: 6em
+   margin-bottom: 10px;
+
 }
